; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_168.c_resolve.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_168.c_resolve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @resolve(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.hostent*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @inet_addr(i8* %6)
  store i32 %7, i32* %5, align 4
  %8 = icmp eq i32 %7, -1
  br i1 %8, label %9, label %19

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call %struct.hostent* @gethostbyname(i8* %10)
  store %struct.hostent* %11, %struct.hostent** %4, align 8
  %12 = icmp eq %struct.hostent* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %21

14:                                               ; preds = %9
  %15 = load %struct.hostent*, %struct.hostent** %4, align 8
  %16 = getelementptr inbounds %struct.hostent, %struct.hostent* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @memcpy(i32* %5, i32 %17, i32 4)
  br label %19

19:                                               ; preds = %14, %1
  %20 = load i32, i32* %5, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %19, %13
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @inet_addr(i8*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @memcpy(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
